force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Conditioner</fullName>
            </value>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>Microwave Oven</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Vacuum Cleaner</fullName>
            </value>
            <value>
                <fullName>Washing Machine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>