force-app/main/default/objects/Product2/fields/StockQuantity__c.field-meta.xml
<CustomField>
    <fullName>StockQuantity__c</fullName>
    <label>StockQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>