force-app/main/default/objects/Product2/fields/warranty_period_in_month__c.field-meta.xml
<CustomField>
    <fullName>warranty_period_in_month__c</fullName>
    <label>warranty period in month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>